# staking-farm

./: .gitignore  Cargo.toml  HowTo.md  README.md
mock-receiver/: Cargo.toml  build.sh
mock-receiver/src/: lib.rs
res/: staking_factory_release.wasm  staking_farm_release.wasm
src/: account.rs  farm.rs  internal.rs  lib.rs  owner.rs  stake.rs  test_utils.rs  token_receiver.rs
staking-factory/: Cargo.toml  build_docker.sh  build_local.sh
staking-factory/src/: lib.rs
staking-factory/tests/: spec.rs
staking-farm/: Cargo.toml  build_docker.sh  build_local.sh  test.sh
staking-farm/src/: account.rs  farm.rs  internal.rs  lib.rs  owner.rs  stake.rs  staking_pool.rs  test_utils.rs  token_receiver.rs  views.rs
staking-farm/tests/: ft_transfer_call_receiver_out_of_gas.rs  test_general.rs  workspaces.rs
test-token/: Cargo.toml
test-token/src/: lib.rs
whitelist/: Cargo.toml
whitelist/src/: lib.rs
