[package]
name = "staking-farm"
version = "1.2.0"
authors = ["referencedev <goi65io3903d@protonmail.com>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
uint = { version = "0.10.0", default-features = false }
schemars = "0.8"
near-sdk = { version = "5.17", features = ["unit-testing", "unstable"]  }
near-contract-standards = "5.17"

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
log = "0.4"
env_logger = { version = "0.7.1", default-features = false }
near-workspaces = "0.10"
tokio = { version = "1.28", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
